tests/error/error.gw
#! [contains] right-side operand is non-mutable
const int i;
12 :=> i;

